--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
+.chat{
+  width: 50%;
+  min-height: 50vh;
+  max-height: 50vh;
+  overflow: scroll;
+  border: 2px solid black;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.toMs{
+  width: 45%;
+  background-color: rgb(8, 8, 134);
+  margin-bottom: 10px;
   color: white;
+  padding: 5px;
+  border-radius: 6px;
+  box-shadow: 0 0 10px rgba(109, 109, 109, 0.788);
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.fromMs{
+  width: 45%;
+  padding: 5px;
+  color: white;
+  background-color:  rgb(0, 117, 10);
+  margin-left: 53%;
+  margin-bottom: 10px;
+  border-radius: 6px;
+  box-shadow: 0 0 5px rgba(109, 109, 109, 0.521);
 }
